--- a/src/main/resources/templates/fragments/inputs/address.html
+++ b/src/main/resources/templates/fragments/inputs/address.html
@@ -17,29 +17,39 @@
     cityInputName=${inputName + T(formflow.library.inputs.AddressParts).CITY.toString()},
     stateInputName=${inputName + T(formflow.library.inputs.AddressParts).STATE.toString()},
     zipCodeInputName=${inputName + T(formflow.library.inputs.AddressParts).ZIPCODE.toString()},
+    hasAutoCompleteStreetAddress1=${!#strings.isEmpty(autoCompleteStreetAddress1)},
+    hasAutoCompleteStreetAddress2=${!#strings.isEmpty(autoCompleteStreetAddress2)},
+    hasAutoCompleteCity=${!#strings.isEmpty(autoCompleteCity)},
+    hasAutoCompleteState=${!#strings.isEmpty(autoCompleteState)},
+    hasAutoCompleteZipCode=${!#strings.isEmpty(autoCompleteZipCode)},
     validateAddressInputName=${T(formflow.library.inputs.FieldNameMarkers).UNVALIDATED_FIELD_MARKER_VALIDATE_ADDRESS + inputName}"
 >
   <th:block th:replace="~{fragments/inputs/text ::
                   text(inputName=${streetAddressInputName},
+                  autoComplete=${hasAutoCompleteStreetAddress1 ? autoCompleteStreetAddress1 : null},
                   required=${requireAddressFields},
                   label=${streetAddressLabel},
                   helpText=${streetAddressHelpText})}"/>
   <th:block th:replace="~{fragments/inputs/text ::
                   text(inputName=${streetAddress2InputName},
+                  autoComplete=${hasAutoCompleteStreetAddress2 ? autoCompleteStreetAddress2 : null},
                   label=${streetAddress2Label},
                   helpText=${streetAddress2HelpText})}"/>
   <th:block th:replace="~{fragments/inputs/text ::
                   text(inputName=${cityInputName},
+                  autoComplete=${hasAutoCompleteCity ? autoCompleteCity : null},
                   required=${requireAddressFields},
                   label=${cityLabel},
                   helpText=${cityHelpText})}"/>
   <th:block th:replace="~{fragments/inputs/state ::
                   state(inputName=${stateInputName},
+                  autoComplete=${hasAutoCompleteState ? autoCompleteState : null},
                   required=${requireAddressFields},
                   label=${stateLabel},
                   helpText=${stateHelpText})}"/>
   <th:block th:replace="~{fragments/inputs/text ::
                   text(inputName=${zipCodeInputName},
+                  autoComplete=${hasAutoCompleteZipCode ? autoCompleteZipCode : null},
                   required=${requireAddressFields},
                   label=${zipCodeLabel},
                   helpText=${zipCodeHelpText})}"/>
