--- a/src/main/resources/templates/fragments/inputs/select.html
+++ b/src/main/resources/templates/fragments/inputs/select.html
@@ -4,6 +4,7 @@
       hasHelpText=${!#strings.isEmpty(helpText)},
       hasLabel=${!#strings.isEmpty(label)},
       hasAriaLabel=${!#strings.isEmpty(ariaLabel)},
+      hasAutoComplete=${!#strings.isEmpty(autoComplete)},
       requiredInputsForFlow=${requiredInputs.get(flow)},
       isRequiredInput=${(requiredInputsForFlow != null && requiredInputsForFlow.getOrDefault(inputName, false)) || (required != null && required)},
       hasError=${
@@ -31,6 +32,7 @@
               th:id="${inputName}"
               th:name="${inputName}"
               th:attr="
+                autocomplete=${hasAutoComplete ? autoComplete : null},
                 aria-describedby=${hasHelpText ? inputName + '-help-text' : ''},
                 aria-labelledby=${hasAriaLabel ? ariaLabel : ''},
                 aria-invalid=${hasError}">
