fixing checks to work with concurrenthashmaps

--- a/src/main/resources/templates/fragments/cardHeaderForSingleInputScreen.html
+++ b/src/main/resources/templates/fragments/cardHeaderForSingleInputScreen.html
@@ -3,7 +3,7 @@
     th:with="
     hasSubtext=${!#strings.isEmpty(subtext)},
     requiredInputsForFlow=${requiredInputs.get(flow)},
-      isRequiredInput=${(requiredInputsForFlow != null && requiredInputsForFlow.getOrDefault(inputName, false)) || (required != null && required)}"
+      isRequiredInput=${(requiredInputsForFlow != null && inputName != null && requiredInputsForFlow.getOrDefault(inputName, false)) || (required != null && required)}"
     th:assert="${!#strings.isEmpty(header)}"
     class="form-card__header">
   <h1 id="header" class="h2" >
