--- a/src/main/resources/templates/fragments/inputs/checkbox.html
+++ b/src/main/resources/templates/fragments/inputs/checkbox.html
@@ -4,7 +4,7 @@
       hasHelpText=${!#strings.isEmpty(checkboxHelpText)},
       hasIcon=${!#strings.isEmpty(checkboxIcon)},
       requiredInputsForFlow=${requiredInputs.get(flow)},
-      isRequiredInput=${(requiredInputsForFlow != null && requiredInputsForFlow.getOrDefault(inputName, false)) || (required != null && required)},
+      isRequiredInput=${(requiredInputsForFlow != null && inputName != null && requiredInputsForFlow.getOrDefault(inputName, false)) || (required != null && required)},
       name=${inputName} + '[]',
       hasError=${
         errorMessages != null &&
