[CCAP-408] Fixing error handling and styling for dates

--- a/src/main/resources/META-INF/resources/webjars/form-flow/0.0.1/css/libraryStyles.css
+++ b/src/main/resources/META-INF/resources/webjars/form-flow/0.0.1/css/libraryStyles.css
@@ -451,6 +451,10 @@ body,
   margin-bottom: 0;
 }
 
+.form-group--error > fieldset > p.text--error {
+  margin-bottom: 2.5rem;
+}
+
 .page-wrapper .form-card {
   max-width: 55rem;
   margin-bottom: 0;
