--- a/src/test/resources/templates/testRelatedSubflows/incomeAmounts.html
+++ b/src/test/resources/templates/testRelatedSubflows/incomeAmounts.html
@@ -3,35 +3,34 @@
 <head th:replace="~{fragments/head :: head(title=#{'Income Amounts'})}"></head>
 <body>
 <div class="page-wrapper">
-  <div th:replace="~{fragments/toolbar :: toolbar}"></div>
-  <section class="slab">
-    <div class="grid">
-      <div th:replace="~{fragments/goBack :: goBackLink}"></div>
-      <main id="content" role="main" class="form-card spacing-above-35"
-            th:with="houseHoldMemberName=${relatedSubflowIteration.get('householdMemberFirstName') + ' ' + relatedSubflowIteration.get('householdMemberLastName')}">
-        <th:block
-            th:replace="~{fragments/cardHeader :: cardHeader(header=${'How much money did ' + houseHoldMemberName + ' receive in the last 12 months?'})}"/>
-        <th:block
-            th:replace="~{fragments/form :: form(action=${formAction}, content=~{::incomeAmounts})}">
-          <div th:ref="incomeAmounts">
-            <div class="form-card__content">
-                <th:block th:each="incomeType: ${fieldData['incomeTypes[]']}">
-                  <th:block
-                      th:replace="~{fragments/inputs/money :: money(data=fieldData, inputName=${incomeType + 'Amount'},
-                      label=#{'income-shared.' + ${incomeType}},
+    <div th:replace="~{fragments/toolbar :: toolbar}"></div>
+    <section class="slab">
+        <div class="grid">
+            <div th:replace="~{fragments/goBack :: goBackLink}"></div>
+            <main id="content" role="main" class="form-card spacing-above-35"
+                  th:with="houseHoldMemberName=${relatedSubflowIteration.get('householdMemberFirstName') + ' ' + relatedSubflowIteration.get('householdMemberLastName')},
+                           incomeType=${repeatForIteration.get('repeatForValue')}">
+                <th:block
+                        th:replace="~{fragments/cardHeader :: cardHeader(header=${'How much money did ' + houseHoldMemberName + ' receive in the last 12 months from ' + incomeType + '?'})}"/>
+                <th:block
+                        th:replace="~{fragments/form :: form(action=${formAction}, content=~{::incomeAmounts})}">
+                    <div th:ref="incomeAmounts">
+                        <div class="form-card__content">
+                            <th:block
+                                    th:replace="~{fragments/inputs/money :: money(data=fieldData, inputName=${incomeType + 'Amount'},
+                      label=${'How much did you make last year from ' + incomeType},
                       helpText=#{'Yearly amount'})}"/>
-                </th:block>
-            </div>
-            <div class="form-card__footer">
-              <th:block th:replace="~{fragments/inputs/submitButton :: submitButton(
+                        </div>
+                        <div class="form-card__footer">
+                            <th:block th:replace="~{fragments/inputs/submitButton :: submitButton(
                 text=#{general.inputs.continue})}"/>
-            </div>
-          </div>
-        </th:block>
-        </th:block>
-      </main>
-    </div>
-  </section>
+                        </div>
+                    </div>
+                </th:block>
+                </th:block>
+            </main>
+        </div>
+    </section>
 </div>
 <th:block th:replace="~{fragments/footer :: footer}"/>
 </body>
