[CCAP-1510] Renaming honeycrisp to system

--- a/src/main/resources/templates/fragments/libraryHead.html
+++ b/src/main/resources/templates/fragments/libraryHead.html
@@ -1,6 +1,6 @@
 <th:block th:fragment="headLinks">
-  <link href="/webjars/form-flow/0.0.1/css/honeycrisp.min.css" rel="preload" as="style"/>
-  <link href="/webjars/form-flow/0.0.1/css/honeycrisp.min.css" rel="stylesheet"/>
+  <link href="/webjars/form-flow/0.0.1/css/system.min.css" rel="preload" as="style"/>
+  <link href="/webjars/form-flow/0.0.1/css/system.min.css" rel="stylesheet"/>
   <link href="/webjars/form-flow/0.0.1/css/libraryStyles.css" rel="preload" as="style"/>
   <link href="/webjars/form-flow/0.0.1/css/libraryStyles.css" rel="stylesheet"/>
   <link href="/webjars/form-flow/0.0.1/css/customDropzone.css" rel="preload" as="style"/>
@@ -11,8 +11,8 @@
   <link rel="preload" href="/webjars/form-flow/0.0.1/fonts/MaterialIcons-Regular.ttf?ia7soh"
         as="font"
         crossorigin="anonymous"/>
-  <link rel="preload" href="/webjars/form-flow/0.0.1/js/honeycrisp.min.js" as="script">
-  <script src="/webjars/form-flow/0.0.1/js/honeycrisp.min.js"></script>
+  <link rel="preload" href="/webjars/form-flow/0.0.1/js/system.min.js" as="script">
+  <script src="/webjars/form-flow/0.0.1/js/system.min.js"></script>
   <script src="/webjars/form-flow/0.0.1/js/formFlowDropZone.js"></script>
   <script src="/webjars/form-flow/0.0.1/js/formFlowLanguageSelector.js"></script>
   <script src="/webjars/form-flow/0.0.1/js/formFlowDisableMultipleFormSubmit.js"></script>
